--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Emma Beurskens",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express.js": "^1.0.0"
   }
 }
